# Audit-Logging-Pipeline

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  backend.py  pyproject.toml
.github/: pull_request_template.md
docs/: verification_report.md
examples/: demo.sh
src/: typer.py
src/auditlog/: __init__.py  cli.py  hashing.py  service.py  storage.py
src/rich/: __init__.py  console.py  table.py
tests/: test_hashing.py  test_service_append_query.py  test_smoke.py  test_storage.py  test_verify_chain.py
